<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title">My Nano Degree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify">Spotify Streamer</string>
    <string name="scores">Scores App</string>
    <string name="library">Library App</string>
    <string name="buildIt">Build it Bigger</string>
    <string name="bacon">Bacon Reader</string>
    <string name="capstone">Capstone: My Own App</string>

</resources>
