<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal" android:gravity="center_horizontal" tools:context=".MainActivity">

    <TextView android:text="@string/title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/spotify"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_btn_orange"
        android:textAllCaps="true"
        android:layout_marginTop="50dp"
        android:text="@string/spotify"
        android:textColor="@drawable/selector_btn_text"/>

    <Button
        android:id="@+id/scores"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_btn_orange"
        android:textAllCaps="true"
        android:layout_marginTop="10dp"
        android:text="@string/scores"
        android:textColor="@drawable/selector_btn_text"/>

    <Button
        android:id="@+id/library"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_btn_orange"
        android:textAllCaps="true"
        android:layout_marginTop="10dp"
        android:text="@string/library"
        android:textColor="@drawable/selector_btn_text"/>

    <Button
        android:id="@+id/buildIt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_btn_orange"
        android:textAllCaps="true"
        android:layout_marginTop="10dp"
        android:text="@string/buildIt"
        android:textColor="@drawable/selector_btn_text"/>

    <Button
        android:id="@+id/bacon"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_btn_orange"
        android:textAllCaps="true"
        android:layout_marginTop="10dp"
        android:text="@string/bacon"
        android:textColor="@drawable/selector_btn_text"/>

    <Button
        android:id="@+id/capstone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_btn_pink"
        android:textAllCaps="true"
        android:layout_marginTop="10dp"
        android:text="@string/capstone"
        android:textColor="@drawable/selector_btn_text"/>

</LinearLayout>
